user auth and auth gaurds

--- a/src/app/stories/stories.component.html
+++ b/src/app/stories/stories.component.html
@@ -59,7 +59,7 @@
         <div *ngIf="videosReview" class="col-12 col-md-5 mt-5 mt-md-0">
           <div class="row mt-5">
             <div class="col-6 mt-5" *ngFor='let url of videosReview'>
-              <video src="url"></video> <br />
+              <video src="../../assets/VID_20181124_081838.mp4"></video> <br />
             </div>
           </div>
         </div>
