--- a/src/app/stories/stories.component.scss
+++ b/src/app/stories/stories.component.scss
@@ -3,4 +3,14 @@
     background : #090d28;
     border: none;
     border-bottom: 1px solid #ffffff;
+    color: #ffffff;
+}
+
+.imgHolder {
+    border-radius: 10px;
+}
+
+.mediaHolder {
+    border-radius: 10px;
+    border:1px solid #090d28;
 }
